intel: xsk: initialize skb_frag_t::bv_offset in ZC drivers (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3136,6 +3136,7 @@
 	patches.kernel.org/6.6.15-217-ice-work-on-pre-XDP-prog-frag-count.patch
 	patches.kernel.org/6.6.15-218-i40e-handle-multi-buffer-packets-that-are-shru.patch
 	patches.kernel.org/6.6.15-219-ice-remove-redundant-xdp_rxq_info-registration.patch
+	patches.kernel.org/6.6.15-220-intel-xsk-initialize-skb_frag_t-bv_offset-in-Z.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
