--- a/series.conf
+++ b/series.conf
@@ -2961,6 +2961,7 @@
 	patches.kernel.org/6.6.15-042-crypto-s390-aes-Fix-buffer-overread-in-CTR-mod.patch
 	patches.kernel.org/6.6.15-043-s390-vfio-ap-unpin-pages-on-gisc-registration-.patch
 	patches.kernel.org/6.6.15-044-PM-devfreq-Fix-buffer-overflow-in-trans_stat_s.patch
+	patches.kernel.org/6.6.15-045-mtd-maps-vmu-flash-Fix-the-mtd-core-switch-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
