--- a/series.conf
+++ b/series.conf
@@ -3051,6 +3051,7 @@
 	patches.kernel.org/6.6.15-132-serial-sc16is7xx-change-EFR-lock-to-operate-on.patch
 	patches.kernel.org/6.6.15-133-serial-sc16is7xx-convert-from-_raw_-to-_noinc_.patch
 	patches.kernel.org/6.6.15-134-serial-sc16is7xx-fix-invalid-sc16is7xx_lines-b.patch
+	patches.kernel.org/6.6.15-135-serial-sc16is7xx-remove-obsolete-loop-in-sc16i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
