--- a/series.conf
+++ b/series.conf
@@ -3135,6 +3135,7 @@
 	patches.kernel.org/6.6.15-216-xsk-fix-usage-of-multi-buffer-BPF-helpers-for-.patch
 	patches.kernel.org/6.6.15-217-ice-work-on-pre-XDP-prog-frag-count.patch
 	patches.kernel.org/6.6.15-218-i40e-handle-multi-buffer-packets-that-are-shru.patch
+	patches.kernel.org/6.6.15-219-ice-remove-redundant-xdp_rxq_info-registration.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
