net/mlx5: DR, Use the right GVMI number for drop action (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3113,6 +3113,7 @@
 	patches.kernel.org/6.6.15-194-net-mlx5-Fix-a-WARN-upon-a-callback-command-fa.patch
 	patches.kernel.org/6.6.15-195-net-mlx5-Bridge-Enable-mcast-in-smfs-steering-.patch
 	patches.kernel.org/6.6.15-196-net-mlx5-Bridge-fix-multicast-packets-sent-to-.patch
+	patches.kernel.org/6.6.15-197-net-mlx5-DR-Use-the-right-GVMI-number-for-drop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
