--- a/series.conf
+++ b/series.conf
@@ -3126,6 +3126,7 @@
 	patches.kernel.org/6.6.15-207-netfilter-nf_tables-validate-NFPROTO_-family.patch
 	patches.kernel.org/6.6.15-208-net-stmmac-Wait-a-bit-for-the-reset-to-take-ef.patch
 	patches.kernel.org/6.6.15-209-net-mvpp2-clear-BM-pool-before-initialization.patch
+	patches.kernel.org/6.6.15-210-selftests-net-fix-rps_default_mask-with-32-CPU.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
