--- a/series.conf
+++ b/series.conf
@@ -3026,6 +3026,7 @@
 	patches.kernel.org/6.6.15-107-media-mtk-jpeg-Fix-timeout-schedule-error-in-m.patch
 	patches.kernel.org/6.6.15-108-media-mtk-jpeg-Fix-use-after-free-bug-due-to-e.patch
 	patches.kernel.org/6.6.15-109-riscv-mm-Fixup-compat-arch_get_mmap_end.patch
+	patches.kernel.org/6.6.15-110-riscv-mm-Fixup-compat-mode-boot-failure.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
