--- a/series.conf
+++ b/series.conf
@@ -3036,6 +3036,7 @@
 	patches.kernel.org/6.6.15-117-rtc-mc146818-lib-Adjust-failure-return-code-fo.patch
 	patches.kernel.org/6.6.15-118-rtc-Add-support-for-configuring-the-UIP-timeou.patch
 	patches.kernel.org/6.6.15-119-rtc-Extend-timeout-for-waiting-for-UIP-to-clea.patch
+	patches.kernel.org/6.6.15-120-nouveau-vmm-don-t-set-addr-on-the-fail-path-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
