media: ov01a10: Enable runtime PM before registering async sub-device (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2971,6 +2971,7 @@
 	patches.kernel.org/6.6.15-052-rpmsg-virtio-Free-driver_override-when-rpmsg_r.patch
 	patches.kernel.org/6.6.15-053-media-ov9734-Enable-runtime-PM-before-register.patch
 	patches.kernel.org/6.6.15-054-media-ov13b10-Enable-runtime-PM-before-registe.patch
+	patches.kernel.org/6.6.15-055-media-ov01a10-Enable-runtime-PM-before-registe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
