--- a/series.conf
+++ b/series.conf
@@ -3193,6 +3193,7 @@
 	patches.kernel.org/6.6.15-274-thermal-intel-hfi-Refactor-enabling-code-into-.patch
 	patches.kernel.org/6.6.15-275-thermal-intel-hfi-Disable-an-HFI-instance-when.patch
 	patches.kernel.org/6.6.15-276-thermal-intel-hfi-Add-syscore-callbacks-for-sy.patch
+	patches.kernel.org/6.6.15-277-fs-pipe-move-check-to-pipe_has_watch_queue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
