--- a/series.conf
+++ b/series.conf
@@ -3058,6 +3058,7 @@
 	patches.kernel.org/6.6.15-139-serial-Do-not-hold-the-port-lock-when-setting-.patch
 	patches.kernel.org/6.6.15-140-ksmbd-set-v2-lease-version-on-lease-upgrade.patch
 	patches.kernel.org/6.6.15-141-ksmbd-fix-potential-circular-locking-issue-in-.patch
+	patches.kernel.org/6.6.15-142-ksmbd-don-t-increment-epoch-if-current-state-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
