selftests/bpf: track tcp payload offset as scalar in xdp_synproxy (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3069,6 +3069,7 @@
 	patches.kernel.org/6.6.15-150-bpf-correct-loop-detection-for-iterators-conve.patch
 	patches.kernel.org/6.6.15-151-selftests-bpf-test-if-state-loops-are-detected.patch
 	patches.kernel.org/6.6.15-152-bpf-print-full-verifier-states-on-infinite-loo.patch
+	patches.kernel.org/6.6.15-153-selftests-bpf-track-tcp-payload-offset-as-scal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
