--- a/series.conf
+++ b/series.conf
@@ -3000,6 +3000,7 @@
 	patches.kernel.org/6.6.15-081-arm64-dts-qcom-msm8939-Make-blsp_dma-controlle.patch
 	patches.kernel.org/6.6.15-082-arm64-dts-qcom-sc7180-fix-USB-wakeup-interrupt.patch
 	patches.kernel.org/6.6.15-083-arm64-dts-qcom-sdm845-fix-USB-wakeup-interrupt.patch
+	patches.kernel.org/6.6.15-084-arm64-dts-qcom-sdm670-fix-USB-wakeup-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
