--- a/series.conf
+++ b/series.conf
@@ -3203,6 +3203,7 @@
 	patches.kernel.org/6.6.15-284-thermal-core-Store-trip-pointer-in-struct-ther.patch
 	patches.kernel.org/6.6.15-285-thermal-gov_power_allocator-avoid-inability-to.patch
 	patches.kernel.org/6.6.15-286-mm-migrate-record-the-mlocked-page-status-to-r.patch
+	patches.kernel.org/6.6.15-287-mm-migrate-fix-getting-incorrect-page-mapping-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
