rtc: Adjust failure return code for cmos_set_alarm() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3032,6 +3032,7 @@
 	patches.kernel.org/6.6.15-113-arm64-sme-Always-exit-sme_alloc-early-with-exi.patch
 	patches.kernel.org/6.6.15-114-arm64-entry-fix-ARM64_WORKAROUND_SPECULATIVE_U.patch
 	patches.kernel.org/6.6.15-115-rtc-cmos-Use-ACPI-alarm-for-non-Intel-x86-syst.patch
+	patches.kernel.org/6.6.15-116-rtc-Adjust-failure-return-code-for-cmos_set_al.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
