--- a/series.conf
+++ b/series.conf
@@ -3160,6 +3160,7 @@
 	patches.kernel.org/6.6.15-241-nfsd-fix-RELEASE_LOCKOWNER.patch
 	patches.kernel.org/6.6.15-242-hv_netvsc-Calculate-correct-ring-size-when-PAG.patch
 	patches.kernel.org/6.6.15-243-netfilter-nft_chain_filter-handle-NETDEV_UNREG.patch
+	patches.kernel.org/6.6.15-244-netfilter-nf_tables-reject-QUEUE-DROP-verdict-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
