drm/bridge: nxp-ptn3460: simplify some error checking (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3181,6 +3181,7 @@
 	patches.kernel.org/6.6.15-262-drm-amd-display-fix-bandwidth-validation-failu.patch
 	patches.kernel.org/6.6.15-263-drm-amd-display-Disable-PSR-SU-on-Parade-0803-.patch
 	patches.kernel.org/6.6.15-264-Revert-drm-amd-display-fix-bandwidth-validatio.patch
+	patches.kernel.org/6.6.15-265-drm-bridge-nxp-ptn3460-simplify-some-error-che.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
