docs: kernel_abi.py: fix command injection (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3017,6 +3017,7 @@
 	patches.kernel.org/6.6.15-098-ARM-dts-qcom-sdx55-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-099-lsm-new-security_file_ioctl_compat-hook.patch
 	patches.kernel.org/6.6.15-100-dlm-use-kernel_connect-and-kernel_bind.patch
+	patches.kernel.org/6.6.15-101-docs-kernel_abi.py-fix-command-injection.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
