media: i2c: imx290: Properly encode registers as little-endian (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3198,6 +3198,7 @@
 	patches.kernel.org/6.6.15-279-media-v4l-cci-Include-linux-bits.h.patch
 	patches.kernel.org/6.6.15-280-media-v4l-cci-Add-macros-to-obtain-register-wi.patch
 	patches.kernel.org/6.6.15-281-media-v4l2-cci-Add-support-for-little-endian-e.patch
+	patches.kernel.org/6.6.15-282-media-i2c-imx290-Properly-encode-registers-as-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
