--- a/series.conf
+++ b/series.conf
@@ -3072,6 +3072,7 @@
 	patches.kernel.org/6.6.15-153-selftests-bpf-track-tcp-payload-offset-as-scal.patch
 	patches.kernel.org/6.6.15-154-selftests-bpf-track-string-payload-offset-as-s.patch
 	patches.kernel.org/6.6.15-155-bpf-extract-__check_reg_arg-utility-function.patch
+	patches.kernel.org/6.6.15-156-bpf-extract-setup_func_entry-utility-function.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
