--- a/series.conf
+++ b/series.conf
@@ -2944,6 +2944,7 @@
 	patches.kernel.org/6.6.15-025-Revert-cifs-reconnect-work-should-have-referen.patch
 	patches.kernel.org/6.6.15-026-cifs-reconnect-worker-should-take-reference-on.patch
 	patches.kernel.org/6.6.15-027-cifs-handle-servers-that-still-advertise-multi.patch
+	patches.kernel.org/6.6.15-028-cifs-update-iface_last_update-on-each-query-an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
