media: mtk-jpeg: Fix timeout schedule error in mtk_jpegdec_worker (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3023,6 +3023,7 @@
 	patches.kernel.org/6.6.15-104-mmc-core-Use-mrq.sbc-in-close-ended-ffu.patch
 	patches.kernel.org/6.6.15-105-mmc-mmc_spi-remove-custom-DMA-mapped-buffers.patch
 	patches.kernel.org/6.6.15-106-media-i2c-st-mipid02-correct-format-propagatio.patch
+	patches.kernel.org/6.6.15-107-media-mtk-jpeg-Fix-timeout-schedule-error-in-m.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
