--- a/series.conf
+++ b/series.conf
@@ -2952,6 +2952,7 @@
 	patches.kernel.org/6.6.15-033-PM-sleep-Fix-possible-deadlocks-in-core-system.patch
 	patches.kernel.org/6.6.15-034-arm64-properly-install-vmlinuz.efi.patch
 	patches.kernel.org/6.6.15-035-OPP-Pass-rounded-rate-to-_set_opp.patch
+	patches.kernel.org/6.6.15-036-btrfs-sysfs-validate-scrub_speed_max-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
