selftests/bpf: tests for iterating callbacks (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3074,6 +3074,7 @@
 	patches.kernel.org/6.6.15-155-bpf-extract-__check_reg_arg-utility-function.patch
 	patches.kernel.org/6.6.15-156-bpf-extract-setup_func_entry-utility-function.patch
 	patches.kernel.org/6.6.15-157-bpf-verify-callbacks-as-if-they-are-called-unk.patch
+	patches.kernel.org/6.6.15-158-selftests-bpf-tests-for-iterating-callbacks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
