--- a/series.conf
+++ b/series.conf
@@ -3012,6 +3012,7 @@
 	patches.kernel.org/6.6.15-093-arm64-dts-qcom-sm8150-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-094-arm64-dts-qcom-sc8180x-fix-USB-DP-DM-HS-PHY-in.patch
 	patches.kernel.org/6.6.15-095-arm64-dts-qcom-sc8180x-fix-USB-SS-wakeup.patch
+	patches.kernel.org/6.6.15-096-arm64-dts-qcom-sdm670-fix-USB-DP-DM-HS-PHY-int.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
