mtd: rawnand: Prevent crossing LUN boundaries during sequential reads (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2962,6 +2962,7 @@
 	patches.kernel.org/6.6.15-043-s390-vfio-ap-unpin-pages-on-gisc-registration-.patch
 	patches.kernel.org/6.6.15-044-PM-devfreq-Fix-buffer-overflow-in-trans_stat_s.patch
 	patches.kernel.org/6.6.15-045-mtd-maps-vmu-flash-Fix-the-mtd-core-switch-to-.patch
+	patches.kernel.org/6.6.15-046-mtd-rawnand-Prevent-crossing-LUN-boundaries-du.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
