--- a/series.conf
+++ b/series.conf
@@ -3180,6 +3180,7 @@
 	patches.kernel.org/6.6.15-261-drm-Allow-drivers-to-indicate-the-damage-helpe.patch
 	patches.kernel.org/6.6.15-262-drm-amd-display-fix-bandwidth-validation-failu.patch
 	patches.kernel.org/6.6.15-263-drm-amd-display-Disable-PSR-SU-on-Parade-0803-.patch
+	patches.kernel.org/6.6.15-264-Revert-drm-amd-display-fix-bandwidth-validatio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
