gpio: eic-sprd: Clear interrupt after set the interrupt type (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3228,6 +3228,7 @@
 	patches.kernel.org/6.6.15-309-drm-exynos-gsc-minor-fix-for-loop-iteration-in.patch
 	patches.kernel.org/6.6.15-310-firmware-arm_scmi-Use-xa_insert-to-store-opps.patch
 	patches.kernel.org/6.6.15-311-firmware-arm_scmi-Use-xa_insert-when-saving-ra.patch
+	patches.kernel.org/6.6.15-312-gpio-eic-sprd-Clear-interrupt-after-set-the-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
