--- a/series.conf
+++ b/series.conf
@@ -3137,6 +3137,7 @@
 	patches.kernel.org/6.6.15-218-i40e-handle-multi-buffer-packets-that-are-shru.patch
 	patches.kernel.org/6.6.15-219-ice-remove-redundant-xdp_rxq_info-registration.patch
 	patches.kernel.org/6.6.15-220-intel-xsk-initialize-skb_frag_t-bv_offset-in-Z.patch
+	patches.kernel.org/6.6.15-221-ice-update-xdp_rxq_info-frag_size-for-ZC-enabl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
