nfsd: fix RELEASE_LOCKOWNER (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3157,6 +3157,7 @@
 	patches.kernel.org/6.6.15-238-rbd-don-t-move-requests-to-the-running-list-on.patch
 	patches.kernel.org/6.6.15-239-exec-Fix-error-handling-in-begin_new_exec.patch
 	patches.kernel.org/6.6.15-240-wifi-iwlwifi-fix-a-memory-corruption.patch
+	patches.kernel.org/6.6.15-241-nfsd-fix-RELEASE_LOCKOWNER.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
