parisc/power: Fix power soft-off button emulation on qemu (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2987,6 +2987,7 @@
 	patches.kernel.org/6.6.15-068-bus-mhi-host-Drop-chan-lock-before-queuing-buf.patch
 	patches.kernel.org/6.6.15-069-bus-mhi-host-Add-spinlock-to-protect-WP-access.patch
 	patches.kernel.org/6.6.15-070-parisc-firmware-Fix-F-extend-for-PDC-addresses.patch
+	patches.kernel.org/6.6.15-071-parisc-power-Fix-power-soft-off-button-emulati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
