bnxt_en: Wait for FLR to complete during probe (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3088,6 +3088,7 @@
 	patches.kernel.org/6.6.15-169-net-smc-fix-illegal-rmb_desc-access-in-SMC-D-c.patch
 	patches.kernel.org/6.6.15-170-selftests-bonding-Increase-timeout-to-1200s.patch
 	patches.kernel.org/6.6.15-171-tcp-make-sure-init-the-accept_queue-s-spinlock.patch
+	patches.kernel.org/6.6.15-172-bnxt_en-Wait-for-FLR-to-complete-during-probe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
