--- a/series.conf
+++ b/series.conf
@@ -3038,6 +3038,7 @@
 	patches.kernel.org/6.6.15-119-rtc-Extend-timeout-for-waiting-for-UIP-to-clea.patch
 	patches.kernel.org/6.6.15-120-nouveau-vmm-don-t-set-addr-on-the-fail-path-to.patch
 	patches.kernel.org/6.6.15-121-efi-disable-mirror-feature-during-crashkernel.patch
+	patches.kernel.org/6.6.15-122-ubifs-ubifs_symlink-Fix-memleak-of-inode-i_lin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
