--- a/series.conf
+++ b/series.conf
@@ -3161,6 +3161,7 @@
 	patches.kernel.org/6.6.15-242-hv_netvsc-Calculate-correct-ring-size-when-PAG.patch
 	patches.kernel.org/6.6.15-243-netfilter-nft_chain_filter-handle-NETDEV_UNREG.patch
 	patches.kernel.org/6.6.15-244-netfilter-nf_tables-reject-QUEUE-DROP-verdict-.patch
+	patches.kernel.org/6.6.15-245-platform-x86-intel-uncore-freq-Fix-types-in-sy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
