net: fec: fix the unhandled context fault from smmu (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3143,6 +3143,7 @@
 	patches.kernel.org/6.6.15-224-i40e-update-xdp_rxq_info-frag_size-for-ZC-enab.patch
 	patches.kernel.org/6.6.15-225-fjes-fix-memleaks-in-fjes_hw_setup.patch
 	patches.kernel.org/6.6.15-226-selftests-bonding-do-not-test-arp-ns-target-wi.patch
+	patches.kernel.org/6.6.15-227-net-fec-fix-the-unhandled-context-fault-from-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
