net/mlx5e: Fix peer flow lists handling (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3109,6 +3109,7 @@
 	patches.kernel.org/6.6.15-190-selftests-fill-in-some-missing-configs-for-net.patch
 	patches.kernel.org/6.6.15-191-net-sched-flower-Fix-chain-template-offload.patch
 	patches.kernel.org/6.6.15-192-net-mlx5e-Fix-operation-precedence-bug-in-port.patch
+	patches.kernel.org/6.6.15-193-net-mlx5e-Fix-peer-flow-lists-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
