--- a/series.conf
+++ b/series.conf
@@ -3246,6 +3246,7 @@
 	patches.kernel.org/6.6.15-327-clocksource-Skip-watchdog-check-for-large-watc.patch
 	patches.kernel.org/6.6.15-328-tick-sched-Preserve-number-of-idle-sleeps-acro.patch
 	patches.kernel.org/6.6.15-329-x86-entry-ia32-Ensure-s32-is-sign-extended-to-.patch
+	patches.kernel.org/6.6.15-330-serial-core-fix-kernel-doc-for-uart_port_unloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
