spi: fix finalize message on error return (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3237,6 +3237,7 @@
 	patches.kernel.org/6.6.15-318-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
 	patches.kernel.org/6.6.15-319-spi-spi-cadence-Reverse-the-order-of-interleav.patch
 	patches.kernel.org/6.6.15-320-cifs-fix-stray-unlock-in-cifs_chan_skip_or_dis.patch
+	patches.kernel.org/6.6.15-321-spi-fix-finalize-message-on-error-return.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
