--- a/series.conf
+++ b/series.conf
@@ -3031,6 +3031,7 @@
 	patches.kernel.org/6.6.15-112-arm64-errata-Add-Cortex-A510-speculative-unpri.patch
 	patches.kernel.org/6.6.15-113-arm64-sme-Always-exit-sme_alloc-early-with-exi.patch
 	patches.kernel.org/6.6.15-114-arm64-entry-fix-ARM64_WORKAROUND_SPECULATIVE_U.patch
+	patches.kernel.org/6.6.15-115-rtc-cmos-Use-ACPI-alarm-for-non-Intel-x86-syst.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
