--- a/series.conf
+++ b/series.conf
@@ -3158,6 +3158,7 @@
 	patches.kernel.org/6.6.15-239-exec-Fix-error-handling-in-begin_new_exec.patch
 	patches.kernel.org/6.6.15-240-wifi-iwlwifi-fix-a-memory-corruption.patch
 	patches.kernel.org/6.6.15-241-nfsd-fix-RELEASE_LOCKOWNER.patch
+	patches.kernel.org/6.6.15-242-hv_netvsc-Calculate-correct-ring-size-when-PAG.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
