drm/bridge: parade-ps8640: Ensure bridge is suspended in .post_disable() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3221,6 +3221,7 @@
 	patches.kernel.org/6.6.15-302-drm-panel-samsung-s6d7aa0-drop-DRM_BUS_FLAG_DE.patch
 	patches.kernel.org/6.6.15-303-drm-bridge-sii902x-Fix-probing-race-issue.patch
 	patches.kernel.org/6.6.15-304-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
+	patches.kernel.org/6.6.15-305-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
