rtc: Add support for configuring the UIP timeout for RTC reads (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3034,6 +3034,7 @@
 	patches.kernel.org/6.6.15-115-rtc-cmos-Use-ACPI-alarm-for-non-Intel-x86-syst.patch
 	patches.kernel.org/6.6.15-116-rtc-Adjust-failure-return-code-for-cmos_set_al.patch
 	patches.kernel.org/6.6.15-117-rtc-mc146818-lib-Adjust-failure-return-code-fo.patch
+	patches.kernel.org/6.6.15-118-rtc-Add-support-for-configuring-the-UIP-timeou.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
