--- a/series.conf
+++ b/series.conf
@@ -3236,6 +3236,7 @@
 	patches.kernel.org/6.6.15-317-cpufreq-amd-pstate-Fix-setting-scaling-max-min.patch
 	patches.kernel.org/6.6.15-318-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
 	patches.kernel.org/6.6.15-319-spi-spi-cadence-Reverse-the-order-of-interleav.patch
+	patches.kernel.org/6.6.15-320-cifs-fix-stray-unlock-in-cifs_chan_skip_or_dis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
