--- a/series.conf
+++ b/series.conf
@@ -3117,6 +3117,7 @@
 	patches.kernel.org/6.6.15-198-net-mlx5-DR-Can-t-go-to-uplink-vport-on-RX-rul.patch
 	patches.kernel.org/6.6.15-199-net-mlx5-Use-mlx5-device-constant-for-selectin.patch
 	patches.kernel.org/6.6.15-200-net-mlx5e-Allow-software-parsing-when-IPsec-cr.patch
+	patches.kernel.org/6.6.15-201-net-mlx5e-Ignore-IPsec-replay-window-values-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
