cifs: reconnect work should have reference on server struct (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2938,6 +2938,7 @@
 	patches.kernel.org/6.6.15-019-sh-ecovec24-Rename-missed-backlight-field-from.patch
 	patches.kernel.org/6.6.15-020-smb-client-fix-parsing-of-SMB3.1.1-POSIX-creat.patch
 	patches.kernel.org/6.6.15-021-cifs-handle-cases-where-a-channel-is-closed.patch
+	patches.kernel.org/6.6.15-022-cifs-reconnect-work-should-have-reference-on-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
