--- a/series.conf
+++ b/series.conf
@@ -3045,6 +3045,7 @@
 	patches.kernel.org/6.6.15-126-mm-sparsemem-fix-race-in-accessing-memory_sect.patch
 	patches.kernel.org/6.6.15-127-rename-fix-the-locking-of-subdirectories.patch
 	patches.kernel.org/6.6.15-128-serial-sc16is7xx-improve-regmap-debugfs-by-usi.patch
+	patches.kernel.org/6.6.15-129-serial-sc16is7xx-remove-wasteful-static-buffer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
