--- a/series.conf
+++ b/series.conf
@@ -3133,6 +3133,7 @@
 	patches.kernel.org/6.6.15-214-bpf-Propagate-modified-uaddrlen-from-cgroup-so.patch
 	patches.kernel.org/6.6.15-215-bpf-Add-bpf_sock_addr_set_sun_path-to-allow-wr.patch
 	patches.kernel.org/6.6.15-216-xsk-fix-usage-of-multi-buffer-BPF-helpers-for-.patch
+	patches.kernel.org/6.6.15-217-ice-work-on-pre-XDP-prog-frag-count.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
