--- a/series.conf
+++ b/series.conf
@@ -3146,6 +3146,7 @@
 	patches.kernel.org/6.6.15-227-net-fec-fix-the-unhandled-context-fault-from-s.patch
 	patches.kernel.org/6.6.15-228-tsnep-Remove-FCS-for-XDP-data-path.patch
 	patches.kernel.org/6.6.15-229-tsnep-Fix-XDP_RING_NEED_WAKEUP-for-empty-fill-.patch
+	patches.kernel.org/6.6.15-230-btrfs-scrub-avoid-use-after-free-when-chunk-le.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
