--- a/series.conf
+++ b/series.conf
@@ -2973,6 +2973,7 @@
 	patches.kernel.org/6.6.15-054-media-ov13b10-Enable-runtime-PM-before-registe.patch
 	patches.kernel.org/6.6.15-055-media-ov01a10-Enable-runtime-PM-before-registe.patch
 	patches.kernel.org/6.6.15-056-soc-fsl-cpm1-tsa-Fix-__iomem-addresses-declara.patch
+	patches.kernel.org/6.6.15-057-soc-fsl-cpm1-qmc-Fix-__iomem-addresses-declara.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
