Revert "drm/i915/dsi: Do display on sequence later on icl+" (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3170,6 +3170,7 @@
 	patches.kernel.org/6.6.15-251-xfs-read-only-mounts-with-fsopen-mount-API-are.patch
 	patches.kernel.org/6.6.15-252-gpiolib-acpi-Ignore-touchpad-wakeup-on-GPD-G16.patch
 	patches.kernel.org/6.6.15-253-cpufreq-intel_pstate-Refine-computation-of-P-s.patch
+	patches.kernel.org/6.6.15-254-Revert-drm-i915-dsi-Do-display-on-sequence-lat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
