--- a/series.conf
+++ b/series.conf
@@ -3116,6 +3116,7 @@
 	patches.kernel.org/6.6.15-197-net-mlx5-DR-Use-the-right-GVMI-number-for-drop.patch
 	patches.kernel.org/6.6.15-198-net-mlx5-DR-Can-t-go-to-uplink-vport-on-RX-rul.patch
 	patches.kernel.org/6.6.15-199-net-mlx5-Use-mlx5-device-constant-for-selectin.patch
+	patches.kernel.org/6.6.15-200-net-mlx5e-Allow-software-parsing-when-IPsec-cr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
