selftests: fill in some missing configs for net (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3106,6 +3106,7 @@
 	patches.kernel.org/6.6.15-187-selftest-Don-t-reuse-port-for-SO_INCOMING_CPU-.patch
 	patches.kernel.org/6.6.15-188-netlink-fix-potential-sleeping-issue-in-mqueue.patch
 	patches.kernel.org/6.6.15-189-ipv6-init-the-accept_queue-s-spinlocks-in-inet.patch
+	patches.kernel.org/6.6.15-190-selftests-fill-in-some-missing-configs-for-net.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
