--- a/series.conf
+++ b/series.conf
@@ -3107,6 +3107,7 @@
 	patches.kernel.org/6.6.15-188-netlink-fix-potential-sleeping-issue-in-mqueue.patch
 	patches.kernel.org/6.6.15-189-ipv6-init-the-accept_queue-s-spinlocks-in-inet.patch
 	patches.kernel.org/6.6.15-190-selftests-fill-in-some-missing-configs-for-net.patch
+	patches.kernel.org/6.6.15-191-net-sched-flower-Fix-chain-template-offload.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
