--- a/series.conf
+++ b/series.conf
@@ -3239,6 +3239,7 @@
 	patches.kernel.org/6.6.15-320-cifs-fix-stray-unlock-in-cifs_chan_skip_or_dis.patch
 	patches.kernel.org/6.6.15-321-spi-fix-finalize-message-on-error-return.patch
 	patches.kernel.org/6.6.15-322-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
+	patches.kernel.org/6.6.15-323-drm-bridge-samsung-dsim-Don-t-use-FORCE_STOP_S.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
