--- a/series.conf
+++ b/series.conf
@@ -2948,6 +2948,7 @@
 	patches.kernel.org/6.6.15-029-powerpc-ps3_defconfig-Disable-PPC64_BIG_ENDIAN.patch
 	patches.kernel.org/6.6.15-030-ext4-allow-for-the-last-group-to-be-marked-as-.patch
 	patches.kernel.org/6.6.15-031-async-Split-async_schedule_node_domain.patch
+	patches.kernel.org/6.6.15-032-async-Introduce-async_schedule_dev_nocall.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
