docs: kernel_feat.py: fix potential command injection (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2919,6 +2919,7 @@
 	patches.kernel.org/6.6.14-583-Linux-6.6.14.patch
 	patches.kernel.org/6.6.15-001-docs-sparse-move-TW-sparse.txt-to-TW-dev-tools.patch
 	patches.kernel.org/6.6.15-002-docs-sparse-add-sparse.rst-to-toctree.patch
+	patches.kernel.org/6.6.15-003-docs-kernel_feat.py-fix-potential-command-inje.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
