drm/bridge: anx7625: Ensure bridge is suspended in disable() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3232,6 +3232,7 @@
 	patches.kernel.org/6.6.15-313-ARM-dts-exynos4212-tab3-add-samsung-invert-vcl.patch
 	patches.kernel.org/6.6.15-314-spi-intel-pci-Remove-Meteor-Lake-S-SoC-PCI-ID-.patch
 	patches.kernel.org/6.6.15-315-block-Move-checking-GENHD_FL_NO_PART-to-bdev_a.patch
+	patches.kernel.org/6.6.15-316-drm-bridge-anx7625-Ensure-bridge-is-suspended-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
