--- a/series.conf
+++ b/series.conf
@@ -3195,6 +3195,7 @@
 	patches.kernel.org/6.6.15-276-thermal-intel-hfi-Add-syscore-callbacks-for-sy.patch
 	patches.kernel.org/6.6.15-277-fs-pipe-move-check-to-pipe_has_watch_queue.patch
 	patches.kernel.org/6.6.15-278-pipe-wakeup-wr_wait-after-setting-max_usage.patch
+	patches.kernel.org/6.6.15-279-media-v4l-cci-Include-linux-bits.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
