s390/vfio-ap: reset queues filtered from the guest's AP config (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2978,6 +2978,7 @@
 	patches.kernel.org/6.6.15-059-s390-vfio-ap-always-filter-entire-AP-matrix.patch
 	patches.kernel.org/6.6.15-060-s390-vfio-ap-loop-over-the-shadow-APCB-when-fi.patch
 	patches.kernel.org/6.6.15-061-s390-vfio-ap-let-on_scan_complete-callback-fil.patch
+	patches.kernel.org/6.6.15-062-s390-vfio-ap-reset-queues-filtered-from-the-gu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
