--- a/series.conf
+++ b/series.conf
@@ -3238,6 +3238,7 @@
 	patches.kernel.org/6.6.15-319-spi-spi-cadence-Reverse-the-order-of-interleav.patch
 	patches.kernel.org/6.6.15-320-cifs-fix-stray-unlock-in-cifs_chan_skip_or_dis.patch
 	patches.kernel.org/6.6.15-321-spi-fix-finalize-message-on-error-return.patch
+	patches.kernel.org/6.6.15-322-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
