btrfs: avoid copying BTRFS_ROOT_SUBVOL_DEAD flag to snapshot of subvolume being deleted (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3148,6 +3148,7 @@
 	patches.kernel.org/6.6.15-229-tsnep-Fix-XDP_RING_NEED_WAKEUP-for-empty-fill-.patch
 	patches.kernel.org/6.6.15-230-btrfs-scrub-avoid-use-after-free-when-chunk-le.patch
 	patches.kernel.org/6.6.15-231-btrfs-zoned-fix-lock-ordering-in-btrfs_zone_ac.patch
+	patches.kernel.org/6.6.15-232-btrfs-avoid-copying-BTRFS_ROOT_SUBVOL_DEAD-fla.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
