mips: Call lose_fpu(0) before initializing fcr31 in mips_set_personality_nan (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3241,6 +3241,7 @@
 	patches.kernel.org/6.6.15-322-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
 	patches.kernel.org/6.6.15-323-drm-bridge-samsung-dsim-Don-t-use-FORCE_STOP_S.patch
 	patches.kernel.org/6.6.15-324-cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
+	patches.kernel.org/6.6.15-325-mips-Call-lose_fpu-0-before-initializing-fcr31.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
