--- a/series.conf
+++ b/series.conf
@@ -3095,6 +3095,7 @@
 	patches.kernel.org/6.6.15-176-llc-Drop-support-for-ETH_P_TR_802_2.patch
 	patches.kernel.org/6.6.15-177-udp-fix-busy-polling.patch
 	patches.kernel.org/6.6.15-178-net-fix-removing-a-namespace-with-conflicting-.patch
+	patches.kernel.org/6.6.15-179-tun-fix-missing-dropped-counter-in-tun_xdp_act.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
