--- a/series.conf
+++ b/series.conf
@@ -3009,6 +3009,7 @@
 	patches.kernel.org/6.6.15-090-arm64-dts-qcom-sdm845-fix-USB-DP-DM-HS-PHY-int.patch
 	patches.kernel.org/6.6.15-091-arm64-dts-qcom-sdm845-fix-USB-SS-wakeup.patch
 	patches.kernel.org/6.6.15-092-arm64-dts-qcom-sm8150-fix-USB-DP-DM-HS-PHY-int.patch
+	patches.kernel.org/6.6.15-093-arm64-dts-qcom-sm8150-fix-USB-SS-wakeup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
