--- a/series.conf
+++ b/series.conf
@@ -3185,6 +3185,7 @@
 	patches.kernel.org/6.6.15-266-drm-amdgpu-correct-the-cu-count-for-gfx-v11.patch
 	patches.kernel.org/6.6.15-267-drm-amd-display-Fix-variable-deferencing-befor.patch
 	patches.kernel.org/6.6.15-268-drm-amd-display-Port-DENTIST-hang-and-TDR-fixe.patch
+	patches.kernel.org/6.6.15-269-drm-amd-display-Align-the-returned-error-code-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
