drm: panel-simple: add missing bus flags for Tianma tm070jvhg[30/33] (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3217,6 +3217,7 @@
 	patches.kernel.org/6.6.15-298-drm-amdgpu-gfx10-set-UNORD_DISPATCH-in-compute.patch
 	patches.kernel.org/6.6.15-299-drm-amdgpu-gfx11-set-UNORD_DISPATCH-in-compute.patch
 	patches.kernel.org/6.6.15-300-drm-bridge-parade-ps8640-Wait-for-HPD-when-doi.patch
+	patches.kernel.org/6.6.15-301-drm-panel-simple-add-missing-bus-flags-for-Tia.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
