--- a/series.conf
+++ b/series.conf
@@ -2933,6 +2933,7 @@
 	patches.kernel.org/6.6.15-014-dmaengine-fix-NULL-pointer-in-channel-unregist.patch
 	patches.kernel.org/6.6.15-015-dmaengine-idxd-Move-dma_free_coherent-out-of-s.patch
 	patches.kernel.org/6.6.15-016-scsi-ufs-core-Remove-the-ufshcd_hba_exit-call-.patch
+	patches.kernel.org/6.6.15-017-riscv-Fix-an-off-by-one-in-get_early_cmdline.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
