mtd: rawnand: Fix core interference with sequential reads (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2963,6 +2963,7 @@
 	patches.kernel.org/6.6.15-044-PM-devfreq-Fix-buffer-overflow-in-trans_stat_s.patch
 	patches.kernel.org/6.6.15-045-mtd-maps-vmu-flash-Fix-the-mtd-core-switch-to-.patch
 	patches.kernel.org/6.6.15-046-mtd-rawnand-Prevent-crossing-LUN-boundaries-du.patch
+	patches.kernel.org/6.6.15-047-mtd-rawnand-Fix-core-interference-with-sequent.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
