--- a/series.conf
+++ b/series.conf
@@ -3060,6 +3060,7 @@
 	patches.kernel.org/6.6.15-141-ksmbd-fix-potential-circular-locking-issue-in-.patch
 	patches.kernel.org/6.6.15-142-ksmbd-don-t-increment-epoch-if-current-state-a.patch
 	patches.kernel.org/6.6.15-143-ksmbd-send-lease-break-notification-on-FILE_RE.patch
+	patches.kernel.org/6.6.15-144-ksmbd-Add-missing-set_freezable-for-freezable-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
