i40e: update xdp_rxq_info::frag_size for ZC enabled Rx queue (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3140,6 +3140,7 @@
 	patches.kernel.org/6.6.15-221-ice-update-xdp_rxq_info-frag_size-for-ZC-enabl.patch
 	patches.kernel.org/6.6.15-222-xdp-reflect-tail-increase-for-MEM_TYPE_XSK_BUF.patch
 	patches.kernel.org/6.6.15-223-i40e-set-xdp_rxq_info-frag_size.patch
+	patches.kernel.org/6.6.15-224-i40e-update-xdp_rxq_info-frag_size-for-ZC-enab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
