PM: sleep: Fix possible deadlocks in core system-wide PM code (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2949,6 +2949,7 @@
 	patches.kernel.org/6.6.15-030-ext4-allow-for-the-last-group-to-be-marked-as-.patch
 	patches.kernel.org/6.6.15-031-async-Split-async_schedule_node_domain.patch
 	patches.kernel.org/6.6.15-032-async-Introduce-async_schedule_dev_nocall.patch
+	patches.kernel.org/6.6.15-033-PM-sleep-Fix-possible-deadlocks-in-core-system.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
