--- a/series.conf
+++ b/series.conf
@@ -2977,6 +2977,7 @@
 	patches.kernel.org/6.6.15-058-soc-fsl-cpm1-qmc-Fix-rx-channel-reset.patch
 	patches.kernel.org/6.6.15-059-s390-vfio-ap-always-filter-entire-AP-matrix.patch
 	patches.kernel.org/6.6.15-060-s390-vfio-ap-loop-over-the-shadow-APCB-when-fi.patch
+	patches.kernel.org/6.6.15-061-s390-vfio-ap-let-on_scan_complete-callback-fil.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
