net/bpf: Avoid unused "sin_addr_len" warning when CONFIG_CGROUP_BPF is not set (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3189,6 +3189,7 @@
 	patches.kernel.org/6.6.15-270-drm-amd-display-Fix-late-derefrence-dsc-check-.patch
 	patches.kernel.org/6.6.15-271-drm-amdgpu-pm-Fix-the-power-source-flag-error.patch
 	patches.kernel.org/6.6.15-272-drm-amd-display-Fix-uninitialized-variable-usa.patch
+	patches.kernel.org/6.6.15-273-net-bpf-Avoid-unused-sin_addr_len-warning-when.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
