drm/amd/display: Fix uninitialized variable usage in core_link_ 'read_dpcd() & write_dpcd()' functions (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3188,6 +3188,7 @@
 	patches.kernel.org/6.6.15-269-drm-amd-display-Align-the-returned-error-code-.patch
 	patches.kernel.org/6.6.15-270-drm-amd-display-Fix-late-derefrence-dsc-check-.patch
 	patches.kernel.org/6.6.15-271-drm-amdgpu-pm-Fix-the-power-source-flag-error.patch
+	patches.kernel.org/6.6.15-272-drm-amd-display-Fix-uninitialized-variable-usa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
