--- a/series.conf
+++ b/series.conf
@@ -3021,6 +3021,7 @@
 	patches.kernel.org/6.6.15-102-scripts-get_abi-fix-source-path-leak.patch
 	patches.kernel.org/6.6.15-103-media-videobuf2-dma-sg-fix-vmap-callback.patch
 	patches.kernel.org/6.6.15-104-mmc-core-Use-mrq.sbc-in-close-ended-ffu.patch
+	patches.kernel.org/6.6.15-105-mmc-mmc_spi-remove-custom-DMA-mapped-buffers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
