--- a/series.conf
+++ b/series.conf
@@ -3053,6 +3053,7 @@
 	patches.kernel.org/6.6.15-134-serial-sc16is7xx-fix-invalid-sc16is7xx_lines-b.patch
 	patches.kernel.org/6.6.15-135-serial-sc16is7xx-remove-obsolete-loop-in-sc16i.patch
 	patches.kernel.org/6.6.15-136-serial-sc16is7xx-improve-do-while-loop-in-sc16.patch
+	patches.kernel.org/6.6.15-137-LoongArch-smp-Call-rcutree_report_cpu_starting.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
