wifi: mac80211: fix potential sta-link leak (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3084,6 +3084,7 @@
 	patches.kernel.org/6.6.15-165-cifs-fix-a-pending-undercount-of-srv_count.patch
 	patches.kernel.org/6.6.15-166-cifs-after-disabling-multichannel-mark-tcon-fo.patch
 	patches.kernel.org/6.6.15-167-SUNRPC-use-request-size-to-initialize-bio_vec-.patch
+	patches.kernel.org/6.6.15-168-wifi-mac80211-fix-potential-sta-link-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
