--- a/series.conf
+++ b/series.conf
@@ -3201,6 +3201,7 @@
 	patches.kernel.org/6.6.15-282-media-i2c-imx290-Properly-encode-registers-as-.patch
 	patches.kernel.org/6.6.15-283-thermal-trip-Drop-redundant-trips-check-from-f.patch
 	patches.kernel.org/6.6.15-284-thermal-core-Store-trip-pointer-in-struct-ther.patch
+	patches.kernel.org/6.6.15-285-thermal-gov_power_allocator-avoid-inability-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
