--- a/series.conf
+++ b/series.conf
@@ -3115,6 +3115,7 @@
 	patches.kernel.org/6.6.15-196-net-mlx5-Bridge-fix-multicast-packets-sent-to-.patch
 	patches.kernel.org/6.6.15-197-net-mlx5-DR-Use-the-right-GVMI-number-for-drop.patch
 	patches.kernel.org/6.6.15-198-net-mlx5-DR-Can-t-go-to-uplink-vport-on-RX-rul.patch
+	patches.kernel.org/6.6.15-199-net-mlx5-Use-mlx5-device-constant-for-selectin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
