arm64: dts: qcom: sm8150: fix USB wakeup interrupt types (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3001,6 +3001,7 @@
 	patches.kernel.org/6.6.15-082-arm64-dts-qcom-sc7180-fix-USB-wakeup-interrupt.patch
 	patches.kernel.org/6.6.15-083-arm64-dts-qcom-sdm845-fix-USB-wakeup-interrupt.patch
 	patches.kernel.org/6.6.15-084-arm64-dts-qcom-sdm670-fix-USB-wakeup-interrupt.patch
+	patches.kernel.org/6.6.15-085-arm64-dts-qcom-sm8150-fix-USB-wakeup-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
