--- a/series.conf
+++ b/series.conf
@@ -3168,6 +3168,7 @@
 	patches.kernel.org/6.6.15-249-Revert-drivers-firmware-Move-sysfb_init-from-d.patch
 	patches.kernel.org/6.6.15-250-drm-amdgpu-Fix-the-null-pointer-when-load-rlc-.patch
 	patches.kernel.org/6.6.15-251-xfs-read-only-mounts-with-fsopen-mount-API-are.patch
+	patches.kernel.org/6.6.15-252-gpiolib-acpi-Ignore-touchpad-wakeup-on-GPD-G16.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
