net/mlx5e: fix a potential double-free in fs_any_create_groups (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3119,6 +3119,7 @@
 	patches.kernel.org/6.6.15-200-net-mlx5e-Allow-software-parsing-when-IPsec-cr.patch
 	patches.kernel.org/6.6.15-201-net-mlx5e-Ignore-IPsec-replay-window-values-on.patch
 	patches.kernel.org/6.6.15-202-net-mlx5e-fix-a-double-free-in-arfs_create_gro.patch
+	patches.kernel.org/6.6.15-203-net-mlx5e-fix-a-potential-double-free-in-fs_an.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
