xdp: reflect tail increase for MEM_TYPE_XSK_BUFF_POOL (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3138,6 +3138,7 @@
 	patches.kernel.org/6.6.15-219-ice-remove-redundant-xdp_rxq_info-registration.patch
 	patches.kernel.org/6.6.15-220-intel-xsk-initialize-skb_frag_t-bv_offset-in-Z.patch
 	patches.kernel.org/6.6.15-221-ice-update-xdp_rxq_info-frag_size-for-ZC-enabl.patch
+	patches.kernel.org/6.6.15-222-xdp-reflect-tail-increase-for-MEM_TYPE_XSK_BUF.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
