--- a/series.conf
+++ b/series.conf
@@ -2923,6 +2923,7 @@
 	patches.kernel.org/6.6.15-004-serial-core-Simplify-uart_get_rs485_mode.patch
 	patches.kernel.org/6.6.15-005-serial-core-set-missing-supported-flag-for-RX-.patch
 	patches.kernel.org/6.6.15-006-soundwire-bus-introduce-controller_id.patch
+	patches.kernel.org/6.6.15-007-soundwire-fix-initializing-sysfs-for-same-devi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
