--- a/series.conf
+++ b/series.conf
@@ -2920,6 +2920,7 @@
 	patches.kernel.org/6.6.15-001-docs-sparse-move-TW-sparse.txt-to-TW-dev-tools.patch
 	patches.kernel.org/6.6.15-002-docs-sparse-add-sparse.rst-to-toctree.patch
 	patches.kernel.org/6.6.15-003-docs-kernel_feat.py-fix-potential-command-inje.patch
+	patches.kernel.org/6.6.15-004-serial-core-Simplify-uart_get_rs485_mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
