nbd: always initialize struct msghdr completely (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2981,6 +2981,7 @@
 	patches.kernel.org/6.6.15-062-s390-vfio-ap-reset-queues-filtered-from-the-gu.patch
 	patches.kernel.org/6.6.15-063-s390-vfio-ap-reset-queues-associated-with-adap.patch
 	patches.kernel.org/6.6.15-064-s390-vfio-ap-do-not-reset-queue-removed-from-h.patch
+	patches.kernel.org/6.6.15-065-nbd-always-initialize-struct-msghdr-completely.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
