--- a/series.conf
+++ b/series.conf
@@ -3172,6 +3172,7 @@
 	patches.kernel.org/6.6.15-253-cpufreq-intel_pstate-Refine-computation-of-P-s.patch
 	patches.kernel.org/6.6.15-254-Revert-drm-i915-dsi-Do-display-on-sequence-lat.patch
 	patches.kernel.org/6.6.15-255-drm-Don-t-unref-the-same-fb-many-times-by-mist.patch
+	patches.kernel.org/6.6.15-256-drm-bridge-nxp-ptn3460-fix-i2c_master_send-err.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
