--- a/series.conf
+++ b/series.conf
@@ -3101,6 +3101,7 @@
 	patches.kernel.org/6.6.15-182-net-rds-Fix-UBSAN-array-index-out-of-bounds-in.patch
 	patches.kernel.org/6.6.15-183-netfs-fscache-Prevent-Oops-in-fscache_put_cach.patch
 	patches.kernel.org/6.6.15-184-tracing-Ensure-visibility-when-inserting-an-el.patch
+	patches.kernel.org/6.6.15-185-afs-Hide-silly-rename-files-from-userspace.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
