--- a/series.conf
+++ b/series.conf
@@ -2979,6 +2979,7 @@
 	patches.kernel.org/6.6.15-060-s390-vfio-ap-loop-over-the-shadow-APCB-when-fi.patch
 	patches.kernel.org/6.6.15-061-s390-vfio-ap-let-on_scan_complete-callback-fil.patch
 	patches.kernel.org/6.6.15-062-s390-vfio-ap-reset-queues-filtered-from-the-gu.patch
+	patches.kernel.org/6.6.15-063-s390-vfio-ap-reset-queues-associated-with-adap.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
