bpf: keep track of max number of bpf_loop callback iterations (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3077,6 +3077,7 @@
 	patches.kernel.org/6.6.15-158-selftests-bpf-tests-for-iterating-callbacks.patch
 	patches.kernel.org/6.6.15-159-bpf-widening-for-callback-iterators.patch
 	patches.kernel.org/6.6.15-160-selftests-bpf-test-widening-for-iterating-call.patch
+	patches.kernel.org/6.6.15-161-bpf-keep-track-of-max-number-of-bpf_loop-callb.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
