--- a/series.conf
+++ b/series.conf
@@ -3248,6 +3248,7 @@
 	patches.kernel.org/6.6.15-329-x86-entry-ia32-Ensure-s32-is-sign-extended-to-.patch
 	patches.kernel.org/6.6.15-330-serial-core-fix-kernel-doc-for-uart_port_unloc.patch
 	patches.kernel.org/6.6.15-331-thermal-trip-Drop-lockdep-assertion-from-therm.patch
+	patches.kernel.org/6.6.15-332-Linux-6.6.15.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
