riscv: mm: Fixup compat arch_get_mmap_end (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3025,6 +3025,7 @@
 	patches.kernel.org/6.6.15-106-media-i2c-st-mipid02-correct-format-propagatio.patch
 	patches.kernel.org/6.6.15-107-media-mtk-jpeg-Fix-timeout-schedule-error-in-m.patch
 	patches.kernel.org/6.6.15-108-media-mtk-jpeg-Fix-use-after-free-bug-due-to-e.patch
+	patches.kernel.org/6.6.15-109-riscv-mm-Fixup-compat-arch_get_mmap_end.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
