--- a/series.conf
+++ b/series.conf
@@ -3062,6 +3062,7 @@
 	patches.kernel.org/6.6.15-143-ksmbd-send-lease-break-notification-on-FILE_RE.patch
 	patches.kernel.org/6.6.15-144-ksmbd-Add-missing-set_freezable-for-freezable-.patch
 	patches.kernel.org/6.6.15-145-dt-bindings-net-snps-dwmac-Tx-coe-unsupported.patch
+	patches.kernel.org/6.6.15-146-bpf-move-explored_state-closer-to-the-beginnin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
