--- a/series.conf
+++ b/series.conf
@@ -2968,6 +2968,7 @@
 	patches.kernel.org/6.6.15-049-mtd-rawnand-Clarify-conditions-to-enable-conti.patch
 	patches.kernel.org/6.6.15-050-soc-qcom-pmic_glink_altmode-fix-port-sanity-ch.patch
 	patches.kernel.org/6.6.15-051-media-imx355-Enable-runtime-PM-before-register.patch
+	patches.kernel.org/6.6.15-052-rpmsg-virtio-Free-driver_override-when-rpmsg_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
