powerpc/ps3_defconfig: Disable PPC64_BIG_ENDIAN_ELF_ABI_V2 (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2945,6 +2945,7 @@
 	patches.kernel.org/6.6.15-026-cifs-reconnect-worker-should-take-reference-on.patch
 	patches.kernel.org/6.6.15-027-cifs-handle-servers-that-still-advertise-multi.patch
 	patches.kernel.org/6.6.15-028-cifs-update-iface_last_update-on-each-query-an.patch
+	patches.kernel.org/6.6.15-029-powerpc-ps3_defconfig-Disable-PPC64_BIG_ENDIAN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
