xfs: read only mounts with fsopen mount API are busted (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3167,6 +3167,7 @@
 	patches.kernel.org/6.6.15-248-firmware-arm_scmi-Check-mailbox-SMT-channel-fo.patch
 	patches.kernel.org/6.6.15-249-Revert-drivers-firmware-Move-sysfb_init-from-d.patch
 	patches.kernel.org/6.6.15-250-drm-amdgpu-Fix-the-null-pointer-when-load-rlc-.patch
+	patches.kernel.org/6.6.15-251-xfs-read-only-mounts-with-fsopen-mount-API-are.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
