rename(): fix the locking of subdirectories (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3043,6 +3043,7 @@
 	patches.kernel.org/6.6.15-124-selftests-mm-hugepage-vmemmap-fails-on-64K-pag.patch
 	patches.kernel.org/6.6.15-125-mm-rmap-fix-misplaced-parenthesis-of-a-likely.patch
 	patches.kernel.org/6.6.15-126-mm-sparsemem-fix-race-in-accessing-memory_sect.patch
+	patches.kernel.org/6.6.15-127-rename-fix-the-locking-of-subdirectories.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
