--- a/series.conf
+++ b/series.conf
@@ -2988,6 +2988,7 @@
 	patches.kernel.org/6.6.15-069-bus-mhi-host-Add-spinlock-to-protect-WP-access.patch
 	patches.kernel.org/6.6.15-070-parisc-firmware-Fix-F-extend-for-PDC-addresses.patch
 	patches.kernel.org/6.6.15-071-parisc-power-Fix-power-soft-off-button-emulati.patch
+	patches.kernel.org/6.6.15-072-ARM-dts-imx6q-apalis-add-can-power-up-delay-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
