cifs: fix a pending undercount of srv_count (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3081,6 +3081,7 @@
 	patches.kernel.org/6.6.15-162-selftests-bpf-check-if-max-number-of-bpf_loop-.patch
 	patches.kernel.org/6.6.15-163-Revert-drm-amd-Enable-PCIe-PME-from-D3.patch
 	patches.kernel.org/6.6.15-164-cifs-fix-lock-ordering-while-disabling-multich.patch
+	patches.kernel.org/6.6.15-165-cifs-fix-a-pending-undercount-of-srv_count.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
