--- a/series.conf
+++ b/series.conf
@@ -2992,6 +2992,7 @@
 	patches.kernel.org/6.6.15-073-arm64-dts-qcom-sc8280xp-crd-fix-eDP-phy-compat.patch
 	patches.kernel.org/6.6.15-074-ARM-dts-qcom-sdx55-fix-USB-wakeup-interrupt-ty.patch
 	patches.kernel.org/6.6.15-075-ARM-dts-samsung-exynos4210-i9100-Unconditional.patch
+	patches.kernel.org/6.6.15-076-ARM-dts-qcom-sdx55-fix-pdc-interrupt-cells.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
