--- a/series.conf
+++ b/series.conf
@@ -3024,6 +3024,7 @@
 	patches.kernel.org/6.6.15-105-mmc-mmc_spi-remove-custom-DMA-mapped-buffers.patch
 	patches.kernel.org/6.6.15-106-media-i2c-st-mipid02-correct-format-propagatio.patch
 	patches.kernel.org/6.6.15-107-media-mtk-jpeg-Fix-timeout-schedule-error-in-m.patch
+	patches.kernel.org/6.6.15-108-media-mtk-jpeg-Fix-use-after-free-bug-due-to-e.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
