--- a/series.conf
+++ b/series.conf
@@ -3019,6 +3019,7 @@
 	patches.kernel.org/6.6.15-100-dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.kernel.org/6.6.15-101-docs-kernel_abi.py-fix-command-injection.patch
 	patches.kernel.org/6.6.15-102-scripts-get_abi-fix-source-path-leak.patch
+	patches.kernel.org/6.6.15-103-media-videobuf2-dma-sg-fix-vmap-callback.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
