--- a/series.conf
+++ b/series.conf
@@ -3223,6 +3223,7 @@
 	patches.kernel.org/6.6.15-304-drm-bridge-sii902x-Fix-audio-codec-unregistrat.patch
 	patches.kernel.org/6.6.15-305-drm-bridge-parade-ps8640-Ensure-bridge-is-susp.patch
 	patches.kernel.org/6.6.15-306-drm-bridge-parade-ps8640-Make-sure-we-drop-the.patch
+	patches.kernel.org/6.6.15-307-memblock-fix-crash-when-reserved-memory-is-not.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
