docs: sparse: move TW sparse.txt to TW dev-tools (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2917,6 +2917,7 @@
 	patches.kernel.org/6.6.14-581-arm64-dts-armada-3720-turris-mox-set-irq-type-.patch
 	patches.kernel.org/6.6.14-582-Revert-Revert-md-raid5-Wait-for-MD_SB_CHANGE_P.patch
 	patches.kernel.org/6.6.14-583-Linux-6.6.14.patch
+	patches.kernel.org/6.6.15-001-docs-sparse-move-TW-sparse.txt-to-TW-dev-tools.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
