--- a/series.conf
+++ b/series.conf
@@ -3209,6 +3209,7 @@
 	patches.kernel.org/6.6.15-290-serial-sc16is7xx-fix-unconditional-activation-.patch
 	patches.kernel.org/6.6.15-291-btrfs-zoned-factor-out-prepare_allocation_zone.patch
 	patches.kernel.org/6.6.15-292-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
+	patches.kernel.org/6.6.15-293-drm-i915-lnl-Remove-watchdog-timers-for-PSR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
