--- a/series.conf
+++ b/series.conf
@@ -3211,6 +3211,7 @@
 	patches.kernel.org/6.6.15-292-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
 	patches.kernel.org/6.6.15-293-drm-i915-lnl-Remove-watchdog-timers-for-PSR.patch
 	patches.kernel.org/6.6.15-294-drm-i915-psr-Only-allow-PSR-in-LPSP-mode-on-HS.patch
+	patches.kernel.org/6.6.15-295-drm-panel-edp-Add-AUO-B116XTN02-BOE-NT116WHM-N.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
