cifs: after disabling multichannel, mark tcon for reconnect (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3082,6 +3082,7 @@
 	patches.kernel.org/6.6.15-163-Revert-drm-amd-Enable-PCIe-PME-from-D3.patch
 	patches.kernel.org/6.6.15-164-cifs-fix-lock-ordering-while-disabling-multich.patch
 	patches.kernel.org/6.6.15-165-cifs-fix-a-pending-undercount-of-srv_count.patch
+	patches.kernel.org/6.6.15-166-cifs-after-disabling-multichannel-mark-tcon-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
