--- a/series.conf
+++ b/series.conf
@@ -3098,6 +3098,7 @@
 	patches.kernel.org/6.6.15-179-tun-fix-missing-dropped-counter-in-tun_xdp_act.patch
 	patches.kernel.org/6.6.15-180-tun-add-missing-rx-stats-accounting-in-tun_xdp.patch
 	patches.kernel.org/6.6.15-181-net-micrel-Fix-PTP-frame-parsing-for-lan8814.patch
+	patches.kernel.org/6.6.15-182-net-rds-Fix-UBSAN-array-index-out-of-bounds-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
