--- a/series.conf
+++ b/series.conf
@@ -3134,6 +3134,7 @@
 	patches.kernel.org/6.6.15-215-bpf-Add-bpf_sock_addr_set_sun_path-to-allow-wr.patch
 	patches.kernel.org/6.6.15-216-xsk-fix-usage-of-multi-buffer-BPF-helpers-for-.patch
 	patches.kernel.org/6.6.15-217-ice-work-on-pre-XDP-prog-frag-count.patch
+	patches.kernel.org/6.6.15-218-i40e-handle-multi-buffer-packets-that-are-shru.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
