arm64: dts: qcom: sc7280: fix usb_1 wakeup interrupt types (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3003,6 +3003,7 @@
 	patches.kernel.org/6.6.15-084-arm64-dts-qcom-sdm670-fix-USB-wakeup-interrupt.patch
 	patches.kernel.org/6.6.15-085-arm64-dts-qcom-sm8150-fix-USB-wakeup-interrupt.patch
 	patches.kernel.org/6.6.15-086-arm64-dts-qcom-sc8180x-fix-USB-wakeup-interrup.patch
+	patches.kernel.org/6.6.15-087-arm64-dts-qcom-sc7280-fix-usb_1-wakeup-interru.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
