--- a/series.conf
+++ b/series.conf
@@ -2918,6 +2918,7 @@
 	patches.kernel.org/6.6.14-582-Revert-Revert-md-raid5-Wait-for-MD_SB_CHANGE_P.patch
 	patches.kernel.org/6.6.14-583-Linux-6.6.14.patch
 	patches.kernel.org/6.6.15-001-docs-sparse-move-TW-sparse.txt-to-TW-dev-tools.patch
+	patches.kernel.org/6.6.15-002-docs-sparse-add-sparse.rst-to-toctree.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
