iio: adc: ad7091r: Allow users to configure device events (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2927,6 +2927,7 @@
 	patches.kernel.org/6.6.15-008-net-stmmac-Tx-coe-sw-fallback.patch
 	patches.kernel.org/6.6.15-009-net-stmmac-Prevent-DSA-tags-from-breaking-COE.patch
 	patches.kernel.org/6.6.15-010-iio-adc-ad7091r-Set-alert-bit-in-config-regist.patch
+	patches.kernel.org/6.6.15-011-iio-adc-ad7091r-Allow-users-to-configure-devic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
