parisc/firmware: Fix F-extend for PDC addresses (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2986,6 +2986,7 @@
 	patches.kernel.org/6.6.15-067-bus-mhi-host-Add-alignment-check-for-event-rin.patch
 	patches.kernel.org/6.6.15-068-bus-mhi-host-Drop-chan-lock-before-queuing-buf.patch
 	patches.kernel.org/6.6.15-069-bus-mhi-host-Add-spinlock-to-protect-WP-access.patch
+	patches.kernel.org/6.6.15-070-parisc-firmware-Fix-F-extend-for-PDC-addresses.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
