--- a/series.conf
+++ b/series.conf
@@ -3149,6 +3149,7 @@
 	patches.kernel.org/6.6.15-230-btrfs-scrub-avoid-use-after-free-when-chunk-le.patch
 	patches.kernel.org/6.6.15-231-btrfs-zoned-fix-lock-ordering-in-btrfs_zone_ac.patch
 	patches.kernel.org/6.6.15-232-btrfs-avoid-copying-BTRFS_ROOT_SUBVOL_DEAD-fla.patch
+	patches.kernel.org/6.6.15-233-btrfs-ref-verify-free-ref-cache-before-clearin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
