--- a/series.conf
+++ b/series.conf
@@ -3118,6 +3118,7 @@
 	patches.kernel.org/6.6.15-199-net-mlx5-Use-mlx5-device-constant-for-selectin.patch
 	patches.kernel.org/6.6.15-200-net-mlx5e-Allow-software-parsing-when-IPsec-cr.patch
 	patches.kernel.org/6.6.15-201-net-mlx5e-Ignore-IPsec-replay-window-values-on.patch
+	patches.kernel.org/6.6.15-202-net-mlx5e-fix-a-double-free-in-arfs_create_gro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
