net/mlx5: Bridge, fix multicast packets sent to uplink (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3112,6 +3112,7 @@
 	patches.kernel.org/6.6.15-193-net-mlx5e-Fix-peer-flow-lists-handling.patch
 	patches.kernel.org/6.6.15-194-net-mlx5-Fix-a-WARN-upon-a-callback-command-fa.patch
 	patches.kernel.org/6.6.15-195-net-mlx5-Bridge-Enable-mcast-in-smfs-steering-.patch
+	patches.kernel.org/6.6.15-196-net-mlx5-Bridge-fix-multicast-packets-sent-to-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
