xsk: make xsk_buff_pool responsible for clearing xdp_buff::flags (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3129,6 +3129,7 @@
 	patches.kernel.org/6.6.15-210-selftests-net-fix-rps_default_mask-with-32-CPU.patch
 	patches.kernel.org/6.6.15-211-selftests-netdevsim-fix-the-udp_tunnel_nic-tes.patch
 	patches.kernel.org/6.6.15-212-xsk-recycle-buffer-in-case-Rx-queue-was-full.patch
+	patches.kernel.org/6.6.15-213-xsk-make-xsk_buff_pool-responsible-for-clearin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
