btrfs: zoned: optimize hint byte for zoned allocator (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3208,6 +3208,7 @@
 	patches.kernel.org/6.6.15-289-serial-sc16is7xx-Use-port-lock-wrappers.patch
 	patches.kernel.org/6.6.15-290-serial-sc16is7xx-fix-unconditional-activation-.patch
 	patches.kernel.org/6.6.15-291-btrfs-zoned-factor-out-prepare_allocation_zone.patch
+	patches.kernel.org/6.6.15-292-btrfs-zoned-optimize-hint-byte-for-zoned-alloc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
