spi: bcm-qspi: fix SFDP BFPT read by usig mspi read (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3234,6 +3234,7 @@
 	patches.kernel.org/6.6.15-315-block-Move-checking-GENHD_FL_NO_PART-to-bdev_a.patch
 	patches.kernel.org/6.6.15-316-drm-bridge-anx7625-Ensure-bridge-is-suspended-.patch
 	patches.kernel.org/6.6.15-317-cpufreq-amd-pstate-Fix-setting-scaling-max-min.patch
+	patches.kernel.org/6.6.15-318-spi-bcm-qspi-fix-SFDP-BFPT-read-by-usig-mspi-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
