--- a/series.conf
+++ b/series.conf
@@ -3205,6 +3205,7 @@
 	patches.kernel.org/6.6.15-286-mm-migrate-record-the-mlocked-page-status-to-r.patch
 	patches.kernel.org/6.6.15-287-mm-migrate-fix-getting-incorrect-page-mapping-.patch
 	patches.kernel.org/6.6.15-288-serial-core-Provide-port-lock-wrappers.patch
+	patches.kernel.org/6.6.15-289-serial-sc16is7xx-Use-port-lock-wrappers.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
