serial: sc16is7xx: fix unconditional activation of THRI interrupt (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3206,6 +3206,7 @@
 	patches.kernel.org/6.6.15-287-mm-migrate-fix-getting-incorrect-page-mapping-.patch
 	patches.kernel.org/6.6.15-288-serial-core-Provide-port-lock-wrappers.patch
 	patches.kernel.org/6.6.15-289-serial-sc16is7xx-Use-port-lock-wrappers.patch
+	patches.kernel.org/6.6.15-290-serial-sc16is7xx-fix-unconditional-activation-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
