thermal: trip: Drop redundant trips check from for_each_thermal_trip() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3199,6 +3199,7 @@
 	patches.kernel.org/6.6.15-280-media-v4l-cci-Add-macros-to-obtain-register-wi.patch
 	patches.kernel.org/6.6.15-281-media-v4l2-cci-Add-support-for-little-endian-e.patch
 	patches.kernel.org/6.6.15-282-media-i2c-imx290-Properly-encode-registers-as-.patch
+	patches.kernel.org/6.6.15-283-thermal-trip-Drop-redundant-trips-check-from-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
