cifs: reconnect worker should take reference on server struct unconditionally (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2942,6 +2942,7 @@
 	patches.kernel.org/6.6.15-023-cifs-handle-when-server-starts-supporting-mult.patch
 	patches.kernel.org/6.6.15-024-cifs-handle-when-server-stops-supporting-multi.patch
 	patches.kernel.org/6.6.15-025-Revert-cifs-reconnect-work-should-have-referen.patch
+	patches.kernel.org/6.6.15-026-cifs-reconnect-worker-should-take-reference-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
