--- a/series.conf
+++ b/series.conf
@@ -3018,6 +3018,7 @@
 	patches.kernel.org/6.6.15-099-lsm-new-security_file_ioctl_compat-hook.patch
 	patches.kernel.org/6.6.15-100-dlm-use-kernel_connect-and-kernel_bind.patch
 	patches.kernel.org/6.6.15-101-docs-kernel_abi.py-fix-command-injection.patch
+	patches.kernel.org/6.6.15-102-scripts-get_abi-fix-source-path-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
