=?UTF-8?q?cxl/region=EF=BC=9AFix=20overflow=20issue=20in?= =?UTF-8?q?=20alloc=5Fhpa()?= (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3240,6 +3240,7 @@
 	patches.kernel.org/6.6.15-321-spi-fix-finalize-message-on-error-return.patch
 	patches.kernel.org/6.6.15-322-MIPS-lantiq-register-smp_ops-on-non-smp-platfo.patch
 	patches.kernel.org/6.6.15-323-drm-bridge-samsung-dsim-Don-t-use-FORCE_STOP_S.patch
+	patches.kernel.org/6.6.15-324-cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
