crypto: api - Disallow identical driver names (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2955,6 +2955,7 @@
 	patches.kernel.org/6.6.15-036-btrfs-sysfs-validate-scrub_speed_max-value.patch
 	patches.kernel.org/6.6.15-037-crypto-lib-mpi-Fix-unexpected-pointer-access-i.patch
 	patches.kernel.org/6.6.15-038-erofs-fix-lz4-inplace-decompression.patch
+	patches.kernel.org/6.6.15-039-crypto-api-Disallow-identical-driver-names.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
