mm/sparsemem: fix race in accessing memory_section->usage (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3042,6 +3042,7 @@
 	patches.kernel.org/6.6.15-123-kexec-do-syscore_shutdown-in-kernel_kexec.patch
 	patches.kernel.org/6.6.15-124-selftests-mm-hugepage-vmemmap-fails-on-64K-pag.patch
 	patches.kernel.org/6.6.15-125-mm-rmap-fix-misplaced-parenthesis-of-a-likely.patch
+	patches.kernel.org/6.6.15-126-mm-sparsemem-fix-race-in-accessing-memory_sect.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
