kexec: do syscore_shutdown() in kernel_kexec (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3039,6 +3039,7 @@
 	patches.kernel.org/6.6.15-120-nouveau-vmm-don-t-set-addr-on-the-fail-path-to.patch
 	patches.kernel.org/6.6.15-121-efi-disable-mirror-feature-during-crashkernel.patch
 	patches.kernel.org/6.6.15-122-ubifs-ubifs_symlink-Fix-memleak-of-inode-i_lin.patch
+	patches.kernel.org/6.6.15-123-kexec-do-syscore_shutdown-in-kernel_kexec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
