selftests: netdevsim: fix the udp_tunnel_nic test (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3127,6 +3127,7 @@
 	patches.kernel.org/6.6.15-208-net-stmmac-Wait-a-bit-for-the-reset-to-take-ef.patch
 	patches.kernel.org/6.6.15-209-net-mvpp2-clear-BM-pool-before-initialization.patch
 	patches.kernel.org/6.6.15-210-selftests-net-fix-rps_default_mask-with-32-CPU.patch
+	patches.kernel.org/6.6.15-211-selftests-netdevsim-fix-the-udp_tunnel_nic-tes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
