net: stmmac: Tx coe sw fallback (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -2924,6 +2924,7 @@
 	patches.kernel.org/6.6.15-005-serial-core-set-missing-supported-flag-for-RX-.patch
 	patches.kernel.org/6.6.15-006-soundwire-bus-introduce-controller_id.patch
 	patches.kernel.org/6.6.15-007-soundwire-fix-initializing-sysfs-for-same-devi.patch
+	patches.kernel.org/6.6.15-008-net-stmmac-Tx-coe-sw-fallback.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
