ksmbd: set v2 lease version on lease upgrade (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3056,6 +3056,7 @@
 	patches.kernel.org/6.6.15-137-LoongArch-smp-Call-rcutree_report_cpu_starting.patch
 	patches.kernel.org/6.6.15-138-mm-page_alloc-unreserve-highatomic-page-blocks.patch
 	patches.kernel.org/6.6.15-139-serial-Do-not-hold-the-port-lock-when-setting-.patch
+	patches.kernel.org/6.6.15-140-ksmbd-set-v2-lease-version-on-lease-upgrade.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
