drm: Allow drivers to indicate the damage helpers to ignore damage clips (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3177,6 +3177,7 @@
 	patches.kernel.org/6.6.15-258-drm-tidss-Fix-atomic_flush-check.patch
 	patches.kernel.org/6.6.15-259-drm-Disable-the-cursor-plane-on-atomic-context.patch
 	patches.kernel.org/6.6.15-260-drm-virtio-Disable-damage-clipping-if-FB-chang.patch
+	patches.kernel.org/6.6.15-261-drm-Allow-drivers-to-indicate-the-damage-helpe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
